# cmake_minimal_project

./: CMakeLists.txt  README.md
include/cmake_minimal_project/: operations.h
src/: main.cpp  operations.cpp
